--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,20 @@ services:
       - pgdata:/var/lib/postgresql/data
     networks:
       - appnet
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin-pbl
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - 5050:80
+    depends_on:
+      - postgres
+    networks:
+      - appnet
+
 networks:
   appnet:
     driver: bridge
